corpus/keywords-and-symbols.txt
=====================================
Keywords - :foo
=====================================

:a
:foo
:rubber-baby-buggy-bumper!
:j3_!:7
:HELICOPTER
:+fiduciary+
:use-smart-mode?

::foo
:foo/bar
:foo/:bar
:foo/bar/baz

---

(program
  (keyword)
  (keyword)
  (keyword)
  (keyword)
  (keyword)
  (keyword)
  (keyword)

  (keyword (qualified_keyword))
  (keyword (qualified_keyword))
  (keyword (qualified_keyword))
  (keyword (qualified_keyword))
  )

=====================================
Symbols - foo
=====================================

a
foo
rubber-baby-buggy-bumper!
j3_!:7
HELICOPTER
+fiduciary+
$foo$bar
some->

a/b
foo/bar

java.lang.String
java.lang.Byte/decode
clojure.core.server$start_server
clojure.core/some->

---

(program
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)

  (symbol (qualified_symbol))
  (symbol (qualified_symbol))

  (symbol (classname))
  (symbol (qualified_symbol (classname)))
  (symbol (classname))
  (symbol (qualified_symbol (classname)))
  )
