corpus/misc.txt
=====================================
Quote - '() (quote)
=====================================

'()
'"a"
'("a" "b" "c")

(quote ())
(quote "a")
(quote ("a" "b" "c"))

---

(program
  (quote (list))
  (quote (string))
  (quote (list (string) (string) (string)))

  (quote (list))
  (quote (string))
  (quote (list (string) (string) (string)))
  )

=====================================
Deref - @
=====================================

@foo
@      foo
@(identity foo)

---

(program
  (deref (symbol))
  (deref (symbol))
  (deref (list (symbol) (symbol)))
  )

=====================================
Symbolic Value - ##Inf, ##-Inf, ##NaN
=====================================

[##Inf, 2, 3]
##-Inf
(+ 8 ## NaN)
##       Inf

---

(program
  (vector (symbolic_value (infinity))
          (number (number_long))
          (number (number_long)))
  (symbolic_value (negative_infinity))
  (list (symbol)
        (number (number_long))
        (symbolic_value (not_a_number)))
  (symbolic_value (infinity))
  )

=====================================
Tagged Literal - #inst, #uuid, #foo/bar
=====================================

#inst "foo"
#uuid :bar
# js 'hello
#unrepl/... "foo"
#foo/bar [1 2 3]

---

(program
    (tagged_literal (tag) (string))
    (tagged_literal (tag) (keyword))
    (tagged_literal (tag) (quote (symbol)))
    (tagged_literal (elision) (string))
    (tagged_literal (tag) (vector
        (number (number_long))
        (number (number_long))
        (number (number_long)))))


=====================================
Reader Conditional - #? #?@
=====================================

#?(:clj  (Clojure expression)
   :cljs (ClojureScript expression)
   :cljr (ClojureCLR expression)
   :default (fallthrough expression))

(list #?@(:clj  ["a"]
          :cljs [:a]))

---

(program
  (reader_conditional
    (keyword) (list (symbol) (symbol))
    (keyword) (list (symbol) (symbol))
    (keyword) (list (symbol) (symbol))
    (keyword) (list (symbol) (symbol)))

  (list
    (symbol)
    (reader_conditional
      (keyword) (vector (string))
      (keyword) (vector (keyword))))
  )
